# ort_inference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
examples/: ort_inference.ipynb
src/: inference.hpp  main.cpp
